--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,6 +41,7 @@ list(APPEND headers
 
     transmitter.h
     receiver.h
+    transceiver.h
 )
 
 list(APPEND sources 
@@ -65,7 +66,7 @@ list(APPEND sources
 
     transmitter.cpp
     receiver.cpp
-
+    transceiver.cpp
 )
 
 
